измененая структура проэкта

--- a/html/resume.html
+++ b/html/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Резюме</title>
-    <link  rel="stylesheet" href="resume.css">
+    <link href="../css/resume.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <h1>Шаповал Ирина</h1>
@@ -14,7 +14,8 @@
     </p>
         <div>
         <h2>Школа</h2>
-            <p><a href="http://schkola100-zaporozhye.jimdo.com/" target="_blank">uffjyhm</a>
+        <p>
+            <a href="http://schkola100-zaporozhye.jimdo.com/" target="_blank">uffjyhm</a>
         </p>
         <h2>Училище</h2>
             <ul>1994 - начало учебы</ul>
