--- a/html/resume.html
+++ b/html/resume.html
@@ -7,25 +7,37 @@
 </head>
 <body>
     <h1>Шаповал Ирина</h1>
+    <img src="../img/a_86cad53d.jpg" alt="моё фото"/>
     <p class="red">Родилась в замечательном городе
     <a href="https://ru.wikipedia.org/wiki/%D0%97%D0%B0%D0%BF%D0%BE%D1%80%D0%BE%D0%B6%D1%8C%D0%B5" target="_blank">
         Запорожье
+        <img src="../img/ZP.jpg" alt=""/>
     </a>
     </p>
-        <div>
+    <div>
         <h2>Школа</h2>
         <p>
-            <a href="http://schkola100-zaporozhye.jimdo.com/" target="_blank">uffjyhm</a>
+            <a href="http://schkola100-zaporozhye.jimdo.com/" target="_blank">Школа №100</a>
         </p>
         <h2>Училище</h2>
-            <ul>1994 - начало учебы</ul>
-            <ul>1998 - окончание учебы</ul>
+        <ul>
+            <li>1994 - начало учебы</li>
+            <li>1998 - окончание учебы</li>
+        </ul>
         <h2>Университет</h2>
-            <ul>2001 - начало учебы в Запорожском национальном университете</ul>
-                <li>факультет української мови та літератури</li>
-            <ul>2003 - получение диплома бакалавра</ul>
-            <ul>2015 - поступление в магистратуру</ul>
-            <ul>2016 - получение диплома магистра педагогики высшей школы</ul>
-        </div>
+        <ul>
+            <li>2001 - начало учебы в Запорожском национальном университете<br/>факультет української мови та літератури</li>
+            <li>2003 - получение диплома бакалавра</li>
+            <li>2015 - поступление в магистратуру</li>
+            <li>2016 - получение диплома магистра педагогики высшей школы</li>
+        </ul>
+    </div>
+    <div id="menu">
+        <ul>
+            <li>home</li>
+            <li>tools</li>
+            <li>contact</li>
+        </ul>
+    </div>
 </body>
 </html>
